# goit-web-hw08

./: .gitignore  pyproject.toml
Task_1/: models.py
Task_2/: connect.py  consumer_email.py  consumer_sms.py  models.py  producer.py
